generators ready with tests

--- a/SomeCoroutine/SomeCoroutine.xcodeproj/xcshareddata/xcschemes/SomeCoroutine.xcscheme
+++ b/SomeCoroutine/SomeCoroutine.xcodeproj/xcshareddata/xcschemes/SomeCoroutine.xcscheme
@@ -29,7 +29,8 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "B6366E262302E157004F62C4"
@@ -48,6 +49,13 @@
             ReferencedContainer = "container:SomeCoroutine.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "APP_IN_TEST"
+            value = "true"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
